frontend/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 3000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: bff
                port:
                  number: 8001
            path: /api
            pathType: Prefix
